Bug 282996 - Crash when updated network infor for WLAN
Summary: Crash when updated network infor for WLAN
Status: RESOLVED FIXED
Alias: None
Product: Network Management
Classification: Unmaintained
Component: Plasma Widget (other bugs)
Version First Reported In: 0.9
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Will Stephenson
URL:
Keywords:
: 292673 292912 295191 304254 307414 308456 310805 311560 313511 316851 328974 330729 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-09-28 22:59 UTC by Peter Lusmore
Modified: 2014-06-22 19:48 UTC (History)
16 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.9.0.12
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (5.49 KB, text/plain)
2014-01-08 20:16 UTC, Dj YB
Details
New crash information added by DrKonqi (9.29 KB, text/plain)
2014-06-16 18:22 UTC, Mikhail
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Peter Lusmore 2011-09-28 22:59:40 UTC
Application: plasma-desktop (0.4)
KDE Platform Version: 4.7.1 (4.7.1)
Qt Version: 4.7.3
Operating System: Linux 3.0.0-4-desktop i686
Distribution: "openSUSE 12.1 Milestone 5 (i586)"

-- Information about the crash:
- What I was doing when the application crashed: Updating teh settings on the WLAN adapter on my Dell Studio 1558

-- Backtrace:
Application: Plasma Desktop Shell (kdeinit4), signal: Segmentation fault
[Current thread is 1 (Thread 0xb5876710 (LWP 2540))]

Thread 2 (Thread 0xab736b70 (LWP 2541)):
#0  0xb5ba8d30 in clock_gettime () from /lib/librt.so.1
#1  0xb6e0d945 in do_gettime (frac=0xab736020, sec=0xab736018) at tools/qelapsedtimer_unix.cpp:123
#2  qt_gettime () at tools/qelapsedtimer_unix.cpp:140
#3  0xb6edfea6 in QTimerInfoList::updateCurrentTime (this=0x8761c04) at kernel/qeventdispatcher_unix.cpp:339
#4  0xb6ee020a in QTimerInfoList::timerWait (this=0x8761c04, tm=...) at kernel/qeventdispatcher_unix.cpp:442
#5  0xb6edea63 in timerSourcePrepareHelper (src=<optimized out>, timeout=0xab73612c) at kernel/qeventdispatcher_glib.cpp:136
#6  0xb6edeafd in timerSourcePrepare (source=0x8761bd0, timeout=<optimized out>) at kernel/qeventdispatcher_glib.cpp:169
#7  0xb5aef0cc in g_main_context_prepare () from /usr/lib/libglib-2.0.so.0
#8  0xb5aefea7 in ?? () from /usr/lib/libglib-2.0.so.0
#9  0xb5af049a in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#10 0xb6edf537 in QEventDispatcherGlib::processEvents (this=0x82ddc00, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#11 0xb6eb019d in QEventLoop::processEvents (this=0xab7362b0, flags=...) at kernel/qeventloop.cpp:149
#12 0xb6eb03e1 in QEventLoop::exec (this=0xab7362b0, flags=...) at kernel/qeventloop.cpp:201
#13 0xb6db351b in QThread::exec (this=0x8762ec0) at thread/qthread.cpp:492
#14 0xb6e90ddd in QInotifyFileSystemWatcherEngine::run (this=0x8762ec0) at io/qfilesystemwatcher_inotify.cpp:248
#15 0xb6db63d3 in QThreadPrivate::start (arg=0x8762ec0) at thread/qthread_unix.cpp:320
#16 0xb6d39d61 in start_thread () from /lib/libpthread.so.0
#17 0xb60f586e in clone () from /lib/libc.so.6

Thread 1 (Thread 0xb5876710 (LWP 2540)):
[KCrash Handler]
#7  deref (this=0x4545454d) at /usr/include/QtCore/qatomic_i386.h:132
#8  operator= (other=..., this=0x926a8a8) at /usr/include/QtCore/qhash.h:594
#9  Knm::Connection::setPermissions (this=0x926a878, permissions=...) at /usr/src/debug/networkmanagement/libs/internals/connection.cpp:425
#10 0xaac5ec67 in ConnectionWidget::writeConfig (this=0x93fe670) at /usr/src/debug/networkmanagement/libs/ui/connectionwidget.cpp:107
#11 0xaaca0fce in ConnectionPreferences::save (this=0x9466fa0) at /usr/src/debug/networkmanagement/libs/ui/connectionprefs.cpp:102
#12 0xaaca9ecb in ConnectionEditor::editConnection (this=0x8db3070, con=0x926a878) at /usr/src/debug/networkmanagement/libs/ui/connectioneditor.cpp:105
#13 0xaaaf923d in ManageConnectionWidget::editGotSecrets (this=0x92a72b0, valid=false, errorMessage=..., uuid=...) at /usr/src/debug/networkmanagement/settings/config/manageconnectionwidget.cpp:548
#14 0xaaaf7464 in ManageConnectionWidget::qt_metacall (this=0x92a72b0, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0xbf802390) at /usr/src/debug/networkmanagement/build/settings/config/moc_manageconnectionwidget.cpp:100
#15 0xb6eb752d in metacall (argv=0xbf802390, idx=41, cl=QMetaObject::InvokeMetaMethod, object=0x92a72b0) at kernel/qmetaobject.cpp:237
#16 QMetaObject::metacall (object=0x92a72b0, cl=QMetaObject::InvokeMetaMethod, idx=41, argv=0xbf802390) at kernel/qmetaobject.cpp:232
#17 0xb6ec6380 in QMetaObject::activate (sender=0x9286510, m=0xaadceb58, local_signal_index=1, argv=0xbf802390) at kernel/qobject.cpp:3278
#18 0xaad7186d in NMDBusSettingsConnectionProvider::getConnectionSecretsCompleted (this=0x9286510, _t1=false, _t2=..., _t3=...) at /usr/src/debug/networkmanagement/build/backends/NetworkManager/moc_nmdbussettingsconnectionprovider.cpp:125
#19 0xaadb4d19 in NMDBusSettingsConnectionProvider::onConnectionSecretsArrived (this=0x9286510, watcher=0x91d18b8) at /usr/src/debug/networkmanagement/backends/NetworkManager/nmdbussettingsconnectionprovider.cpp:484
#20 0xaad71a85 in NMDBusSettingsConnectionProvider::qt_metacall (this=0x9286510, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0xbf802648) at /usr/src/debug/networkmanagement/build/backends/NetworkManager/moc_nmdbussettingsconnectionprovider.cpp:104
#21 0xb6eb752d in metacall (argv=0xbf802648, idx=11, cl=QMetaObject::InvokeMetaMethod, object=0x9286510) at kernel/qmetaobject.cpp:237
#22 QMetaObject::metacall (object=0x9286510, cl=QMetaObject::InvokeMetaMethod, idx=11, argv=0xbf802648) at kernel/qmetaobject.cpp:232
#23 0xb6ec6380 in QMetaObject::activate (sender=0x91d18b8, m=0xb5cf8bd8, local_signal_index=0, argv=0xbf802648) at kernel/qobject.cpp:3278
#24 0xb5cdbfc5 in QDBusPendingCallWatcher::finished (this=0x91d18b8, _t1=0x91d18b8) at .moc/release-shared/moc_qdbuspendingcall.cpp:92
#25 0xb5cdc073 in _q_finished (this=<optimized out>) at qdbuspendingcall.cpp:482
#26 QDBusPendingCallWatcher::qt_metacall (this=0x91d18b8, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0x8d67828) at .moc/release-shared/moc_qdbuspendingcall.cpp:80
#27 0xb6eb752d in metacall (argv=0x8d67828, idx=5, cl=QMetaObject::InvokeMetaMethod, object=0x91d18b8) at kernel/qmetaobject.cpp:237
#28 QMetaObject::metacall (object=0x91d18b8, cl=QMetaObject::InvokeMetaMethod, idx=5, argv=0x8d67828) at kernel/qmetaobject.cpp:232
#29 0xb6ec1f85 in QMetaCallEvent::placeMetaCall (this=0x93ec4b8, object=0x91d18b8) at kernel/qobject.cpp:535
#30 0xb6ec949f in QObject::event (this=0x91d18b8, e=0x93ec4b8) at kernel/qobject.cpp:1217
#31 0xb63d2f04 in notify_helper (e=0x93ec4b8, receiver=0x91d18b8, this=0x80f05b8) at kernel/qapplication.cpp:4462
#32 QApplicationPrivate::notify_helper (this=0x80f05b8, receiver=0x91d18b8, e=0x93ec4b8) at kernel/qapplication.cpp:4434
#33 0xb63d8292 in QApplication::notify (this=0x93ec4b8, receiver=0x91d18b8, e=0x93ec4b8) at kernel/qapplication.cpp:4209
#34 0xb75f3681 in KApplication::notify (this=0x80e6b18, receiver=0x91d18b8, event=0x93ec4b8) at /usr/src/debug/kdelibs-4.7.0/kdeui/kernel/kapplication.cpp:311
#35 0xb6eb117e in QCoreApplication::notifyInternal (this=0x80e6b18, receiver=0x91d18b8, event=0x93ec4b8) at kernel/qcoreapplication.cpp:731
#36 0xb6eb4944 in sendEvent (event=<optimized out>, receiver=<optimized out>) at kernel/qcoreapplication.h:215
#37 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x805b568) at kernel/qcoreapplication.cpp:1372
#38 0xb6eb4a8c in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at kernel/qcoreapplication.cpp:1265
#39 0xb6edf0a4 in sendPostedEvents () at kernel/qcoreapplication.h:220
#40 postEventSourceDispatch (s=0x80f1f80) at kernel/qeventdispatcher_glib.cpp:277
#41 0xb5aefacf in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#42 0xb5af0200 in ?? () from /usr/lib/libglib-2.0.so.0
#43 0xb5af049a in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#44 0xb6edf4d7 in QEventDispatcherGlib::processEvents (this=0x80c8640, flags=...) at kernel/qeventdispatcher_glib.cpp:422
#45 0xb648635a in QGuiEventDispatcherGlib::processEvents (this=0x80c8640, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#46 0xb6eb019d in QEventLoop::processEvents (this=0xbf802e04, flags=...) at kernel/qeventloop.cpp:149
#47 0xb6eb03e1 in QEventLoop::exec (this=0xbf802e04, flags=...) at kernel/qeventloop.cpp:201
#48 0xb6eb4b3a in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1008
#49 0xb63d0d84 in QApplication::exec () at kernel/qapplication.cpp:3736
#50 0xb22987cb in kdemain (argc=1, argv=0x80cc6d0) at /usr/src/debug/kde-workspace-4.7.0/plasma/desktop/shell/main.cpp:120
#51 0x0804fb8d in _start ()

Reported using DrKonqi
Comment 1 Lamarque V. Souza 2011-09-29 23:10:56 UTC
Git commit cca94197d62bf923893f58ec0cb96237d1119ff2 by Lamarque V. Souza.
Committed on 30/09/2011 at 01:10.
Pushed by lvsouza into branch 'nm09'.

Removing some unneeded code.

CCBUG: 282996

M  +0    -2    applet/wirelessnetworkitem.cpp
M  +0    -6    libs/ui/connectionwidget.cpp
M  +0    -1    libs/ui/connectionwidget.h

http://commits.kde.org/networkmanagement/cca94197d62bf923893f58ec0cb96237d1119ff2
Comment 2 Lamarque V. Souza 2011-09-29 23:12:07 UTC
Can you check if the commit above solves your problem, please?
Comment 3 Peter Lusmore 2011-09-30 06:21:21 UTC
Will need instructions on the makefile to use.
Comment 4 Lamarque V. Souza 2011-09-30 08:25:31 UTC
You can read the basic instructions in my blog http://lamarque-lvs.blogspot.com/2011/07/some-clarifications-about-plasma-nm.html . Look for the line with "If you want to compile Plasma NM by yourself do the following".

The last commit is for branch nm09, so you will need to execute the "checkout nm09" part of the instructions. If you have any problems, please contact me.
Comment 5 Lamarque V. Souza 2012-01-31 10:44:15 UTC
*** Bug 292912 has been marked as a duplicate of this bug. ***
Comment 6 Lamarque V. Souza 2012-01-31 10:45:44 UTC
When reporting a bug, please always include the Plasma NM and the NetworkManager versions you use.
Comment 7 Christoph Feck 2012-02-10 18:38:05 UTC
*** Bug 292673 has been marked as a duplicate of this bug. ***
Comment 8 Lamarque V. Souza 2012-03-02 10:46:34 UTC
*** Bug 295191 has been marked as a duplicate of this bug. ***
Comment 9 Jekyll Wu 2012-07-30 01:01:50 UTC
*** Bug 304254 has been marked as a duplicate of this bug. ***
Comment 10 Lamarque V. Souza 2012-09-26 14:14:14 UTC
*** Bug 307414 has been marked as a duplicate of this bug. ***
Comment 11 Lamarque V. Souza 2012-09-26 14:29:07 UTC
Anyone who wants this bug fixed please provides tell me what Plasma NM version you use. You can see the version string by clicking in "Manage Connections"  then "Other".
Comment 12 Lamarque V. Souza 2012-10-15 20:23:51 UTC
*** Bug 308456 has been marked as a duplicate of this bug. ***
Comment 13 Lamarque V. Souza 2012-10-15 20:30:04 UTC
Please test if you can reproduce this problem with Plasma NM 0.9.0.5.
Comment 14 Jekyll Wu 2012-11-28 11:46:01 UTC
*** Bug 310805 has been marked as a duplicate of this bug. ***
Comment 15 Jekyll Wu 2012-12-12 14:14:47 UTC
*** Bug 311560 has been marked as a duplicate of this bug. ***
Comment 16 karsten 2012-12-13 10:36:29 UTC
(In reply to comment #11)
> Anyone who wants this bug fixed please provides tell me what Plasma NM
> version you use. You can see the version string by clicking in "Manage
> Connections"  then "Other".

Hello, I used Version 0.9.0.2 (nm09 20120507).
Comment 17 karsten 2012-12-13 10:37:53 UTC
It seems no crashes happen any more since I de-installed the Nvidia graphics card driver and again use the default driver on my Suse 12 system.
Thanks for the support.
Comment 18 Lamarque V. Souza 2013-01-19 23:21:27 UTC
*** Bug 313511 has been marked as a duplicate of this bug. ***
Comment 19 Lamarque V. Souza 2013-03-16 18:10:22 UTC
*** Bug 316851 has been marked as a duplicate of this bug. ***
Comment 20 Christopher Yeleighton 2013-03-21 18:10:38 UTC
Still crashes at 0.9.4.0
Comment 21 Lamarque V. Souza 2013-03-21 18:14:56 UTC
(In reply to comment #20)
> Still crashes at 0.9.4.0

Which Plasma NM you have installed? You should use the latest version (0.9.0.8) and try to reproduce this problem.
Comment 22 Dj YB 2014-01-08 20:16:59 UTC
Created attachment 84518 [details]
New crash information added by DrKonqi

kcmshell4 (4.11.4) on KDE Platform 4.11.4 using Qt 4.8.5

- What I was doing when the application crashed:

updated wlan connection security settings

-- Backtrace (Reduced):
#5  0x0000003aebac3728 in QString::operator=(QString const&) () from /lib64/libQtCore.so.4
#6  0x0000003af1c40067 in ConnectionWidget::writeConfig() () from /lib64/libknmui.so.4
#7  0x0000003af1c74d49 in ConnectionPreferences::save() () from /lib64/libknmui.so.4
#8  0x0000003af1c7d72d in ConnectionEditor::editConnection(Knm::Connection*) () from /lib64/libknmui.so.4
#9  0x00007feb7c64b9c6 in ManageConnectionWidget::editGotSecrets(bool, QString const&, QString const&) () from /usr/lib64/kde4/kcm_networkmanagement.so
Comment 23 Mikhail 2014-06-16 18:22:18 UTC
Created attachment 87220 [details]
New crash information added by DrKonqi

plasma-desktop (4.10.5) on KDE Platform 4.10.5 using Qt 4.8.5

- What I was doing when the application crashed:
WLAN connection was in the state like "connecting" or smth similar for about half a minute. My actions:
1. opened Network Manager settings
2. selected network I was connecting to
3. pressed "edit" quite nervously  several times
After some dozen of seconds got 2 error messages which disappeared too fast to be read. 
And then Plasma Desktop crashed. 
La Fin.

-- Backtrace (Reduced):
#5  0x00007ffa50bcce15 in Knm::Connection::setPermissions(QHash<QString, QString> const&) () from /lib64/libknminternals.so.4
#6  0x00007ffa5049fcd8 in ConnectionWidget::writeConfig() () from /lib64/libknmui.so.4
#7  0x00007ffa504d4b55 in ConnectionPreferences::save() () from /lib64/libknmui.so.4
#8  0x00007ffa504dd05c in ConnectionEditor::editConnection(Knm::Connection*) () from /lib64/libknmui.so.4
#9  0x00007ffa348b4d29 in ManageConnectionWidget::editGotSecrets(bool, QString const&, QString const&) () from /usr/lib64/kde4/kcm_networkmanagement.so
Comment 24 Lamarque V. Souza 2014-06-22 15:15:05 UTC
Git commit cad389e141e8cda092e673e32218cda6ddd0e7e6 by Lamarque V. Souza.
Committed on 22/06/2014 at 14:24.
Pushed by lvsouza into branch 'nm09'.

Fix crash when something wrong happened when getting connection secrets.

This commit aborts connection editing once we find an error.
FIXED-IN: 0.9.0.12

M  +1    -1    plasma_nm_version.h
M  +6    -0    settings/config/manageconnectionwidget.cpp

http://commits.kde.org/networkmanagement/cad389e141e8cda092e673e32218cda6ddd0e7e6
Comment 25 Lamarque V. Souza 2014-06-22 19:42:45 UTC
*** Bug 330729 has been marked as a duplicate of this bug. ***
Comment 26 Lamarque V. Souza 2014-06-22 19:48:14 UTC
*** Bug 328974 has been marked as a duplicate of this bug. ***