Fix crash when something wrong happened when getting connection secrets.

This commit aborts connection editing once we find an error.

BUG: 282996
FIXED-IN: 0.9.0.12