plasma_nm_version.h
@@ -1,4 +1,4 @@
 #ifndef PLASMA_NM_VERSION_H
 #define PLASMA_NM_VERSION_H
-static const char * plasmaNmVersion = "0.9.0.11 (nm09 20140423)";
+static const char * plasmaNmVersion = "0.9.0.12 (nm09 20140622)";
 #endif
